--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -17,12 +17,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="/assets/lib/bootstrap/js/bootstrap.min.js"></script>
 
-  <script src="/assets/lib/mapbox/mapbox-gl.js"></script>
-  <link rel="stylesheet" href="/assets/lib/mapbox/mapbox-gl.css">
+  <!--<script src="/assets/lib/mapbox/mapbox-gl.js"></script>-->
+  <!--<link rel="stylesheet" href="/assets/lib/mapbox/mapbox-gl.css">-->
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' />
 
-  <link rel="stylesheet" href="/assets/lib/leaflet/leaflet.css" />
+  <!--<link rel="stylesheet" href="/assets/lib/leaflet/leaflet.css" />-->
   <!-- <link href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css' rel='stylesheet' /> -->
-  <script src="/assets/lib/leaflet/leaflet.js"></script>
+  <!--<script src="/assets/lib/leaflet/leaflet.js"></script>-->
   <!-- <script src="https//maps.google.com/maps/api/js?v=3&sensor=false"></script> -->
   <!-- <script src="/assets/lib/leaflet/Google.js"></script> -->
   <!-- <script src="/assets/data/countries.geojson"></script> -->
@@ -72,16 +74,16 @@
       <img src="http://www.cartographicperspectives.org/index.php/journal/article/viewFile/423/479/2245" alt="Google Map's HeatMaps" style="width:100%;height:100%;">
   </div> -->
 <div class="container">
-  <div id='menu'>
-    <input id='basic' type='radio' name='rtoggle' value='basic' checked='checked'>
-    <label for='basic'>basic</label>
-    <input id='streets' type='radio' name='rtoggle' value='streets'>
-    <label for='streets'>streets</label>
-    <input id='dark' type='radio' name='rtoggle' value='dark'>
-    <label for='dark'>dark</label>
-    <input id='satellite' type='radio' name='rtoggle' value='satellite'>
-    <label for='satellite'>satellite</label>
-  </div>
+  <!--<div id='menu'>-->
+  <!--  <input id='basic' type='radio' name='rtoggle' value='basic' checked='checked'>-->
+  <!--  <label for='basic'>basic</label>-->
+  <!--  <input id='streets' type='radio' name='rtoggle' value='streets'>-->
+  <!--  <label for='streets'>streets</label>-->
+  <!--  <input id='dark' type='radio' name='rtoggle' value='dark'>-->
+  <!--  <label for='dark'>dark</label>-->
+  <!--  <input id='satellite' type='radio' name='rtoggle' value='satellite'>-->
+  <!--  <label for='satellite'>satellite</label>-->
+  <!--</div>-->
   <div id='map'></div>
 </div>
 
@@ -92,24 +94,24 @@
   mapboxgl.accessToken = 'pk.eyJ1IjoiYW5zYXJrZXIiLCJhIjoiY2pqb2prODR4MmNpMzNyc28ydXlra2Q4OCJ9.Wm-b1BRlGc1S9q60xCnZlA';
   var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/basic-v9',
+    style: 'mapbox://styles/mapbox/dark-v9',
     zoom: 13,
     center: [4.899, 52.372]
   });
 
     
-  var layerList = document.getElementById('menu');
-  var inputs = layerList.getElementsByTagName('input');
+  // var layerList = document.getElementById('menu');
+  // var inputs = layerList.getElementsByTagName('input');
 
-  function switchLayer(layer) {
-    var layerId = layer.target.id;
-    map.setStyle('mapbox://styles/mapbox/' + layerId + '-v9');
-  }
+  // function switchLayer(layer) {
+  //   var layerId = layer.target.id;
+  //   map.setStyle('mapbox://styles/mapbox/' + layerId + '-v9');
+  // }
 
-  for (var i = 0; i < inputs.length; i++) {
-    inputs[i].onclick = switchLayer;
-  }
-
+  // for (var i = 0; i < inputs.length; i++) {
+  //   inputs[i].onclick = switchLayer;
+  // }
+  
   // Heatmap example
   map.on('load', function() {
     // Add a geojson point source.
